# python_backend

./: requirements.txt  run.py  vercel.json
api/: index.py
app/: main.py  models.py  services.py
my-next-app/: .gitignore  LICENSE  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
my-next-app/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
my-next-app/.next/cache/: .rscinfo  .tsbuildinfo
my-next-app/.next/cache/eslint/: .cache_1t0d45h
my-next-app/.next/server/: app-paths-manifest.json  middleware-react-loadable-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
my-next-app/.next/server/app/: _not-found.html  _not-found.rsc  chat.html  chat.rsc  index.html  index.rsc  page.js.nft.json  page_client-reference-manifest.js  searchform.html  searchform.rsc  signin.html  signin.rsc
my-next-app/.next/server/chunks/: 116.js  349.js  711.js  945.js  [root of the server]__73749f46._.js.map  node_modules_next_f8b8ec51._.js.map
my-next-app/.next/server/pages/: 500.html
my-next-app/.next/static/SnAinsj1EcoSeRQPxMpDi/: _buildManifest.js
my-next-app/src/app/: globals.css  layout.tsx  page.tsx
my-next-app/src/components/: NavBar.tsx
my-next-app/src/config/: firebase.ts
python_backend/: pyproject.toml  vercel.json
python_backend/app/: __init__.py
(+158 files in other folders)
